[package]
name = "coselpro"
version = "0.1.0"
edition = "2021"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"

[dependencies]
argparse = "0.2.2"
#polars = "0.44.2"
#lineartree = "0.1.1"
#tauri = "2.1.1"
postgrest = "1.6.0"
#cdumay_rest_client = "0.3.0"
#podman-rest-client = "0.13.0"
#crypto-rest-client = "1.0.1"
#crypto = "0.5.1"
#md5 = "0.7.0"
tokio = { version = "^1.20", features = ["rt-multi-thread", "macros"] }
reqwest = {version = "^0.11", features = ["json"]}
log4rs = "1.2.0"
log = "0.4.22"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
rpassword = "7.3.1"
md5 = "0.7.0"
homedir = "0.3.4"
pgdatetime = { version = "0.3.0", features = ["serde"] }
chrono = "0.4.38"